--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -48,7 +48,14 @@ jobs:
             targets: 'ALL_BUILD'
             installer: 'inviwo-installer-win'
             artifact: 'build/inviwo-v*.exe'
-            run: './Release/inviwo-cli.exe --logconsole --quit'
+            run: | 
+              ./Release/inviwo-cli.exe --logconsole --quit
+              if [ $? -nq 0 ]
+              then
+                 C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\gflags.exe /i ./Release/inviwo-cli.exe +sls
+                 C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\cdb.exe -g -c q ./Release/inviwo-cli.exe
+              fi
+            
           
           - system: macos
             os: 'macos-13' # for now macos-latest == macos-12 since macos-13 is still "beta"
@@ -563,7 +570,7 @@ jobs:
   update-api-docs:
     name: "Publish updated API Docs"
     if: github.ref == 'refs/heads/master'
-    needs: [build, test-installer, build-linux-apt, clang-tidy]
+    needs: [build, test-installer, build-linux-apt]
     runs-on: windows-latest
     steps:
       - name: "Clone Inviwo"
@@ -606,7 +613,7 @@ jobs:
   update-latest-release:
     name: "Update latest release"
     if: github.ref == 'refs/heads/master'
-    needs: [build, test-installer, build-linux-apt, clang-tidy]
+    needs: [build, test-installer, build-linux-apt]
     strategy:
       matrix:
         os: [windows-latest] # macos-latest,
