--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -2,7 +2,7 @@ name: "Build Inviwo"
 
 on: 
   push:
-    branches:    
+    branches:
       - master
   pull_request:
   workflow_dispatch:
@@ -44,11 +44,14 @@ jobs:
               -DIVW_MODULE_WEBBROWSER=ON
               -DIVW_DOXYGEN_PROJECT=ON 
               -DIVW_DOXYGEN_LATEX_PATH="C:/tools/TinyTeX/bin/win32/pdflatex.exe"
+              -DIVW_MODULE_SGCT=ON
+              -DIVW_APP_INVIWO_DOME=ON
+              -DVCPKG_MANIFEST_FEATURES="sgct"
             preset: msvc-developer
             targets: 'ALL_BUILD'
             installer: 'inviwo-installer-win'
             artifact: 'build/inviwo-v*.exe'
-            run: | 
+            run: |
               ./Release/inviwo-cli.exe --logconsole --quit
               if [ $? -nq 0 ]
               then
@@ -447,6 +450,9 @@ jobs:
         -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
         -DIVW_MODULE_EIGENUTILS=ON
         -DIVW_MODULE_HDF5=ON
+        -DIVW_MODULE_SGCT=ON
+        -DIVW_APP_INVIWO_DOME=ON
+        -DVCPKG_MANIFEST_FEATURES="sgct"
 
     - uses: cpp-linter/cpp-linter-action@v2.12.0
       id: linter
