--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -47,6 +47,8 @@ jobs:
               -DIVW_MODULE_SGCT=ON
               -DIVW_APP_INVIWO_DOME=ON
               -DVCPKG_MANIFEST_FEATURES="sgct"
+              -DCMAKE_MSVC_DEBUG_INFORMATION_FORMAT="$<$<CONFIG:Debug,RelWithDebInfo>:Embedded>"
+              -DCMAKE_VS_GLOBALS="TrackFileAccess=false;UseMultiToolTask=true;DebugInformationFormat=OldStyle"
             preset: msvc-developer
             targets: 'ALL_BUILD'
             installer: 'inviwo-installer-win'
@@ -205,10 +207,12 @@ jobs:
       with:
         python-version: '>=3.10'
         architecture: 'x64'
+        cache: 'pip'
+        cache-dependency-path: 'inviwo/requirements.txt'
     
     - name: "Install Python Modules" 
       shell: bash
-      run: pip3 install numpy Sphinx sphinx-rtd-theme recommonmark
+      run: pip3 install -r inviwo/requirements.txt
 
     - name: "Setup MSVC"
       if: runner.os == 'Windows'
@@ -237,12 +241,26 @@ jobs:
         path: inviwo
         submodules: recursive
 
+    - name: "Setup Ccache"
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        variant: ccache
+        max-size: "1000M"
+        verbose: 2
+        key: inviwo-ccache-${{ matrix.triplet }}-${{ matrix.configuration }}-${{ github.ref }}
+        restore-keys: |
+          inviwo-ccache-${{ matrix.triplet }}-${{ matrix.configuration }}-${{ github.ref }}
+          inviwo-ccache-${{ matrix.triplet }}-${{ matrix.configuration }}-refs/heads/master
+          inviwo-ccache-${{ matrix.triplet }}-${{ matrix.configuration }}-
+
     - name: "Configure CMake"
       shell: bash
       run: >
         VCPKG_ROOT=$VCPKG_INSTALLATION_ROOT && cmake -S inviwo -B build --preset ${{ matrix.preset }}
         --toolchain $VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
         -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
+        -DCMAKE_C_COMPILER_LAUNCHER=ccache
+        -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
         -DVCPKG_TARGET_TRIPLET=${{ matrix.triplet }}
         -DVCPKG_INSTALL_OPTIONS='--clean-after-build'
         -DBUILD_SHARED_LIBS=${{ matrix.cmake_linkage }}
