WebBrowser: browser base class

--- a/modules/webbrowser/CMakeLists.txt
+++ b/modules/webbrowser/CMakeLists.txt
@@ -91,6 +91,7 @@ set(HEADER_FILES
     include/modules/webbrowser/interaction/cefkeyboardmapping.h
     include/modules/webbrowser/processors/processorcefsynchronizer.h
     include/modules/webbrowser/processors/progressbarobservercef.h
+    include/modules/webbrowser/processors/webbrowserbase.h
     include/modules/webbrowser/processors/webbrowserprocessor.h
     include/modules/webbrowser/properties/propertycefsynchronizer.h
     include/modules/webbrowser/properties/propertywidgetcef.h
@@ -113,6 +114,7 @@ set(SOURCE_FILES
     src/interaction/cefkeyboardmapping.cpp
     src/processors/processorcefsynchronizer.cpp
     src/processors/progressbarobservercef.cpp
+    src/processors/webbrowserbase.cpp
     src/processors/webbrowserprocessor.cpp
     src/properties/propertycefsynchronizer.cpp
     src/properties/propertywidgetcef.cpp
