--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -17,7 +17,7 @@ permissions:
   contents: write  # Enable vcpkg to write to the dependency graph
 
 env:
-  VCPKG_BINARY_SOURCES: 'clear;x-gha,readwrite;http,https://jenkins.inviwo.org/cache/{sha},readwrite,Authorization: Bearer ${{ secrets.VCPKG_CACHE_TOKEN }}'
+  VCPKG_BINARY_SOURCES: 'clear;http,https://jenkins.inviwo.org/cache/{sha},readwrite,Authorization: Bearer ${{ secrets.VCPKG_CACHE_TOKEN }}'
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   VCPKG_FEATURE_FLAGS: dependencygraph
   # QT_DEBUG_PLUGINS: 1                           # print qt plugin debug info
@@ -156,108 +156,17 @@ jobs:
     timeout-minutes: 360
     
     steps:
-    - name: "Chocolatey Install" 
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        # Choco-Install is GH Actions wrappers around choco, which does retries
-        # https://github.com/actions/runner-images/blob/main/images/windows/scripts/helpers/ChocoHelpers.ps1
-        Install-ChocoPackage -PackageName doxygen.install 
-        Install-ChocoPackage -PackageName nsis
-        Install-ChocoPackage -PackageName tinytex
-
-    - name: "Chocolatey update paths"
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        GP=`cygpath -u $GITHUB_PATH` 
-        echo "/c/Program Files/doxygen/bin" >> $GP
-        echo "/c/Program Files (x86)/NSIS" >> $GP
-        echo "/c/tools/TinyTeX/bin/win32" >> $GP
-
-    - name: "Brew Install"
-      shell: bash
-      if: runner.os == 'macOS'
-      run: |
-        brew install ninja pkg-config nasm
-        sudo xcode-select --switch /Applications/Xcode_15.2.app/Contents/Developer
-
-    - name: "Apt Install, switch to gcc-13"
-      shell: bash
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt install --fix-missing libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev \
-                         libglew-dev ninja-build gcc-14 g++-14 nasm
-        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-14 130 \
-                                 --slave /usr/bin/g++ g++ /usr/bin/g++-14 \
-                                 --slave /usr/bin/gcov gcov /usr/bin/gcov-14
-        sudo update-alternatives --set gcc /usr/bin/gcc-14
-    
-    - name: "Install Qt"
-      uses: jurplel/install-qt-action@v3
-      with:
-        version: 6.7.0
-        dir: ${{ github.workspace }}
-    
-    - name: "Setup MSVC"
-      if: runner.os == 'Windows'
-      uses: ilammy/msvc-dev-cmd@v1
-      
-    - name: "VCPKG Update"
-      shell: bash
-      run: |
-        echo $VCPKG_INSTALLATION_ROOT
-        cd $VCPKG_INSTALLATION_ROOT
-        git reset --hard
-        git pull
-    
-    - name: "VCPKG Cache config"
-      # Cache built dependencies for faster subsequent builds
-      # https://learn.microsoft.com/en-us/vcpkg/users/binarycaching#gha
-      uses: actions/github-script@v7
-      with:
-        script: |
-          core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
-          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
-
     - name: "Clone Inviwo"
       uses: actions/checkout@v4
-      with: 
+      with:
         path: inviwo
         submodules: false
 
-    - name: "Setup Python"
-      uses: actions/setup-python@v5
-      with:
-        python-version: '>=3.10'
-        architecture: 'x64'
-        cache: 'pip'
-        cache-dependency-path: 'inviwo/requirements.txt'
-
-    - name: "Install Python Modules" 
-      shell: bash
-      run: pip3 install -r inviwo/requirements.txt
-
-    - name: "Setup Ccache"
-      id: ccache
-      uses: petersteneteg/ccache-action@v1.1.0
-      with:
-        variant: ccache
-        max-size: "1500M"
-        verbose: 2
-        key: inviwo-${{ matrix.triplet }}-${{ matrix.configuration }}-${{ github.ref }}
-        restore-keys: |
-          inviwo-${{ matrix.triplet }}-${{ matrix.configuration }}-${{ github.ref }}
-          inviwo-${{ matrix.triplet }}-${{ matrix.configuration }}-refs/heads/master
-          inviwo-${{ matrix.triplet }}-${{ matrix.configuration }}
-
-    - name: "Copy ccache"
-      shell: bash
-      if: runner.os == 'Windows'
-      run: |
-        mkdir build
-        cp ${{ steps.ccache.outputs.executable }} build/cl.exe
+    - name: Install dependencies
+      uses: ./inviwo/.github/actions/install-dependencies
+    
+    - name: Configure build environment
+      uses: ./inviwo/.github/actions/configure-build-env
 
     - name: "Configure CMake"
       shell: bash
@@ -278,7 +187,7 @@ jobs:
       timeout-minutes: 360
       shell: bash
       run: |
-        echo "::add-matcher::inviwo/.github/matchers/${{ matrix.system }}.json"   
+        echo "::add-matcher::inviwo/.github/matchers/${{ matrix.system }}.json"
         cmake --build build --config ${{ matrix.configuration }} --parallel --target ${{ matrix.targets }}
         echo "::remove-matcher owner=compiler::"
         echo "::remove-matcher owner=linker::"
@@ -370,10 +279,9 @@ jobs:
         variant: ccache
         max-size: "1500M"
         verbose: 2
-        key: inviwo-apt-x64-linux-dynamic-Release-${{ github.ref }}
+        save: false
+        key: inviwo-apt-x64-linux-dynamic-Release
         restore-keys: |
-          inviwo-apt-x64-linux-dynamic-Release-${{ github.ref }}
-          inviwo-apt-x64-linux-dynamic-Release-refs/heads/master
           inviwo-apt-x64-linux-dynamic-Release
 
     - name: "Configure"
@@ -492,6 +400,7 @@ jobs:
         -DIVW_MODULE_EIGENUTILS=ON
         -DIVW_MODULE_HDF5=ON
         -DIVW_MODULE_SGCT=ON
+        -DIVW_MODULE_TETRAMESH=ON
         -DIVW_APP_INVIWO_DOME=ON
         -DIVW_MODULE_WEBBROWSER=ON
         -DVCPKG_MANIFEST_FEATURES="sgct"
