GHA: overwrite old caches?

--- a/.github/actions/configure-build-env/action.yml
+++ b/.github/actions/configure-build-env/action.yml
@@ -25,6 +25,7 @@ runs:
         max-size: "1500M"
         verbose: 2
         save: ${{github.ref == 'refs/heads/master'}}
+        append-timestamp: false
         key: inviwo-${{ matrix.triplet }}-${{ matrix.configuration }}
         restore-keys: |
           inviwo-${{ matrix.triplet }}-${{ matrix.configuration }}
